# src/main/resources/openapi.json
@@ -1,13 +1,15 @@
 {
-  "openapi" : "3.0.1",
-  "info" : {
-    "title" : "Autogenerated OpenAPI Server",
-    "description" : "",
-    "version" : "1.0"
+  "openapi": "3.0.1",
+  "info": {
+    "title": "Autogenerated OpenAPI Server",
+    "description": "",
+    "version": "1.0"
   },
-  "servers" : [ {
-    "url" : "http://localhost:8080/jakartaee-openapi-server/api"
-  } ],
+  "servers": [
+    {
+      "url": "http://localhost:8080/jakartaee-openapi-server/api"
+    }
+  ],
   "paths": {
     "/hello": {
       "get": {
@@ -41,6 +43,30 @@
             "content": {
               "application/json": {
                 "schema": { "$ref": "#/components/schemas/GreetResponse" }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/matrix": {
+      "get": {
+        "operationId": "getMatrix",
+        "responses": {
+          "200": {
+            "description": "A 2D list of long values",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "array",
+                    "items": {
+                      "type": "integer",
+                      "format": "int64"
+                    }
+                  }
+                }
               }
             }
           }
